misp/16-ingress-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: misp-dashboard
  namespace: misp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - intel.white.fm
    - intel.internal.white.fm
    secretName: intel-white-fm-tls
  rules:
  - host: intel.white.fm
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: misp-dashboard
            port:
              number: 8001
  - host: intel.internal.white.fm
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: misp-dashboard
            port:
              number: 8001
