misp/17-ingress-raven-bridge.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: misp-raven-bridge
  namespace: misp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - intel.white.fm
    - intel.internal.white.fm
    secretName: intel-white-fm-tls
  rules:
  - host: intel.white.fm
    http:
      paths:
      - path: /raven-ws
        pathType: Prefix
        backend:
          service:
            name: misp-raven-bridge
            port:
              number: 5678
  - host: intel.internal.white.fm
    http:
      paths:
      - path: /raven-ws
        pathType: Prefix
        backend:
          service:
            name: misp-raven-bridge
            port:
              number: 5678
